syntax = "proto3";

package khepri.horus;

option go_package = "khepri.dev/horus";

message AcceptInvitationRequest {
	bytes id = 1;
}
