// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package khepri.horus;

import "google/protobuf/empty.proto";

import "google/protobuf/timestamp.proto";

option go_package = "khepri.dev/horus";

message Account {
  bytes id = 1;

  string alias = 2;

  string name = 6;

  string description = 7;

  Role role = 8;

  google.protobuf.Timestamp created_date = 15;

  User owner = 3;

  Silo silo = 4;

  repeated Membership memberships = 5;

  enum Role {
    ROLE_UNSPECIFIED = 0;

    ROLE_OWNER = 10;

    ROLE_MEMBER = 20;
  }
}

message CreateAccountRequest {
  Account account = 1;
}

message GetAccountRequest {
  bytes id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateAccountRequest {
  Account account = 1;
}

message DeleteAccountRequest {
  bytes id = 1;
}

message ListAccountRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListAccountResponse {
  repeated Account account_list = 1;

  string next_page_token = 2;
}

message Identity {
  string id = 1;

  string kind = 3;

  string verifier = 4;

  string name = 5;

  google.protobuf.Timestamp created_date = 15;

  User owner = 2;
}

message CreateIdentityRequest {
  Identity identity = 1;
}

message GetIdentityRequest {
  string id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateIdentityRequest {
  Identity identity = 1;
}

message DeleteIdentityRequest {
  string id = 1;
}

message Invitation {
  bytes id = 1;

  string invitee = 4;

  google.protobuf.Timestamp created_date = 15;

  google.protobuf.Timestamp expired_date = 14;

  google.protobuf.Timestamp accepted_date = 13;

  google.protobuf.Timestamp declined_date = 12;

  google.protobuf.Timestamp canceled_date = 11;

  Silo silo = 2;

  Account inviter = 3;
}

message CreateInvitationRequest {
  Invitation invitation = 1;
}

message GetInvitationRequest {
  bytes id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateInvitationRequest {
  Invitation invitation = 1;
}

message DeleteInvitationRequest {
  bytes id = 1;
}

message Membership {
  bytes id = 1;

  Role role = 4;

  google.protobuf.Timestamp created_date = 15;

  Account account = 2;

  Team team = 3;

  enum Role {
    ROLE_UNSPECIFIED = 0;

    ROLE_OWNER = 10;

    ROLE_MEMBER = 20;
  }
}

message CreateMembershipRequest {
  Membership membership = 1;
}

message GetMembershipRequest {
  bytes id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateMembershipRequest {
  Membership membership = 1;
}

message DeleteMembershipRequest {
  bytes id = 1;
}

message Silo {
  bytes id = 1;

  string alias = 2;

  string name = 3;

  string description = 4;

  google.protobuf.Timestamp date_created = 15;
}

message CreateSiloRequest {
  Silo silo = 1;
}

message GetSiloRequest {
  bytes id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateSiloRequest {
  Silo silo = 1;
}

message DeleteSiloRequest {
  bytes id = 1;
}

message Team {
  bytes id = 1;

  string alias = 2;

  string name = 5;

  string description = 6;

  InterVisibility inter_visibility = 7;

  IntraVisibility intra_visibility = 8;

  google.protobuf.Timestamp created_date = 15;

  Silo silo = 3;

  enum InterVisibility {
    INTER_VISIBILITY_UNSPECIFIED = 0;

    INTER_VISIBILITY_PRIVATE = 10;

    INTER_VISIBILITY_PUBLIC = 20;
  }

  enum IntraVisibility {
    INTRA_VISIBILITY_UNSPECIFIED = 0;

    INTRA_VISIBILITY_PRIVATE = 10;

    INTRA_VISIBILITY_PUBLIC = 20;
  }
}

message CreateTeamRequest {
  Team team = 1;
}

message GetTeamRequest {
  bytes id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateTeamRequest {
  Team team = 1;
}

message DeleteTeamRequest {
  bytes id = 1;
}

message Token {
  bytes id = 1;

  string value = 2;

  string type = 3;

  string name = 4;

  google.protobuf.Timestamp date_created = 15;

  google.protobuf.Timestamp date_expired = 14;

  User owner = 5;

  Token parent = 6;

  repeated Token children = 7;
}

message CreateTokenRequest {
  Token token = 1;
}

message GetTokenRequest {
  bytes id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateTokenRequest {
  Token token = 1;
}

message DeleteTokenRequest {
  bytes id = 1;
}

message User {
  bytes id = 1;

  string alias = 2;

  google.protobuf.Timestamp date_created = 15;

  User parent = 3;

  repeated User children = 4;

  repeated Identity identities = 5;

  repeated Account accounts = 6;
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  bytes id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  bytes id = 1;
}

service AccountService {
  rpc Create ( CreateAccountRequest ) returns ( Account );

  rpc Get ( GetAccountRequest ) returns ( Account );

  rpc Update ( UpdateAccountRequest ) returns ( Account );

  rpc Delete ( DeleteAccountRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListAccountRequest ) returns ( ListAccountResponse );
}

service IdentityService {
  rpc Create ( CreateIdentityRequest ) returns ( Identity );

  rpc Get ( GetIdentityRequest ) returns ( Identity );

  rpc Update ( UpdateIdentityRequest ) returns ( Identity );

  rpc Delete ( DeleteIdentityRequest ) returns ( google.protobuf.Empty );
}

service InvitationService {
  rpc Create ( CreateInvitationRequest ) returns ( Invitation );

  rpc Get ( GetInvitationRequest ) returns ( Invitation );

  rpc Update ( UpdateInvitationRequest ) returns ( Invitation );

  rpc Delete ( DeleteInvitationRequest ) returns ( google.protobuf.Empty );
}

service MembershipService {
  rpc Create ( CreateMembershipRequest ) returns ( Membership );

  rpc Get ( GetMembershipRequest ) returns ( Membership );

  rpc Update ( UpdateMembershipRequest ) returns ( Membership );

  rpc Delete ( DeleteMembershipRequest ) returns ( google.protobuf.Empty );
}

service SiloService {
  rpc Create ( CreateSiloRequest ) returns ( Silo );

  rpc Get ( GetSiloRequest ) returns ( Silo );

  rpc Update ( UpdateSiloRequest ) returns ( Silo );

  rpc Delete ( DeleteSiloRequest ) returns ( google.protobuf.Empty );
}

service TeamService {
  rpc Create ( CreateTeamRequest ) returns ( Team );

  rpc Get ( GetTeamRequest ) returns ( Team );

  rpc Update ( UpdateTeamRequest ) returns ( Team );

  rpc Delete ( DeleteTeamRequest ) returns ( google.protobuf.Empty );
}

service TokenService {
  rpc Create ( CreateTokenRequest ) returns ( Token );

  rpc Get ( GetTokenRequest ) returns ( Token );

  rpc Update ( UpdateTokenRequest ) returns ( Token );

  rpc Delete ( DeleteTokenRequest ) returns ( google.protobuf.Empty );
}

service UserService {
  rpc Create ( CreateUserRequest ) returns ( User );

  rpc Get ( GetUserRequest ) returns ( User );

  rpc Update ( UpdateUserRequest ) returns ( User );

  rpc Delete ( DeleteUserRequest ) returns ( google.protobuf.Empty );
}
