// Code generated by "github.com/lesomuns/entpb/pbgen". DO NOT EDIT.

syntax = "proto3";

package khepri.horus;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "khepri/horus/common.proto";
import "khepri/horus/extend.proto";

option go_package = "khepri.dev/horus";

service AccountService {
	rpc Create (Account) returns (Account);
	rpc Delete (DeleteAccountRequest) returns (google.protobuf.Empty);
	rpc Get (GetAccountRequest) returns (Account);
	rpc Update (UpdateAccountRequest) returns (Account);
}

service IdentityService {
	rpc Create (Identity) returns (Identity);
	rpc Delete (DeleteIdentityRequest) returns (google.protobuf.Empty);
	rpc Get (GetIdentityRequest) returns (Identity);
	rpc Update (UpdateIdentityRequest) returns (Identity);
}

service InvitationService {
	rpc Accept (AcceptInvitationRequest) returns (google.protobuf.Empty);
	rpc Create (Invitation) returns (Invitation);
	rpc Delete (DeleteInvitationRequest) returns (google.protobuf.Empty);
	rpc Get (GetInvitationRequest) returns (Invitation);
	rpc Update (UpdateInvitationRequest) returns (Invitation);
}

service MembershipService {
	rpc Create (Membership) returns (Membership);
	rpc Delete (DeleteMembershipRequest) returns (google.protobuf.Empty);
	rpc Get (GetMembershipRequest) returns (Membership);
	rpc Update (UpdateMembershipRequest) returns (Membership);
}

service SiloService {
	rpc Create (Silo) returns (Silo);
	rpc Delete (DeleteSiloRequest) returns (google.protobuf.Empty);
	rpc Get (GetSiloRequest) returns (Silo);
	rpc Update (UpdateSiloRequest) returns (Silo);
}

service TeamService {
	rpc Create (Team) returns (Team);
	rpc Delete (DeleteTeamRequest) returns (google.protobuf.Empty);
	rpc Get (GetTeamRequest) returns (Team);
	rpc Update (UpdateTeamRequest) returns (Team);
}

service TokenService {
	rpc Create (Token) returns (Token);
	rpc Delete (DeleteTokenRequest) returns (google.protobuf.Empty);
	rpc Get (GetTokenRequest) returns (Token);
	rpc Update (UpdateTokenRequest) returns (Token);
}

service UserService {
	rpc Create (User) returns (User);
	rpc Delete (DeleteUserRequest) returns (google.protobuf.Empty);
	rpc Get (GetUserRequest) returns (User);
	rpc Update (UpdateUserRequest) returns (User);
}

message DeleteAccountRequest {
	oneof key {
		bytes id = 1;
		string alias = 2;
	}
}

message DeleteIdentityRequest {
	bytes id = 1;
}

message DeleteInvitationRequest {
	bytes id = 1;
}

message DeleteMembershipRequest {
	bytes id = 1;
}

message DeleteSiloRequest {
	oneof key {
		bytes id = 1;
		string alias = 2;
	}
}

message DeleteTeamRequest {
	oneof key {
		bytes id = 1;
		string alias = 2;
	}
}

message DeleteTokenRequest {
	oneof key {
		bytes id = 1;
		string value = 2;
	}
}

message DeleteUserRequest {
	oneof key {
		bytes id = 1;
		string alias = 2;
	}
}

message GetAccountRequest {
	oneof key {
		bytes id = 1;
		string alias = 2;
	}
}

message GetIdentityRequest {
	bytes id = 1;
}

message GetInvitationRequest {
	bytes id = 1;
}

message GetMembershipRequest {
	bytes id = 1;
}

message GetSiloRequest {
	oneof key {
		bytes id = 1;
		string alias = 2;
	}
}

message GetTeamRequest {
	oneof key {
		bytes id = 1;
		string alias = 2;
	}
}

message GetTokenRequest {
	oneof key {
		bytes id = 1;
		string value = 2;
	}
}

message GetUserRequest {
	oneof key {
		bytes id = 1;
		string alias = 2;
	}
}

message UpdateAccountRequest {
	bytes id = 1;
	optional string alias = 2;
	optional string name = 6;
	optional string description = 7;
	optional Role role = 8;
}

message UpdateIdentityRequest {
	bytes id = 1;
	optional string kind = 3;
	optional string verifier = 4;
	optional string name = 5;
}

message UpdateInvitationRequest {
	bytes id = 1;
	optional string invitee = 4;
	optional string type = 5;
	optional google.protobuf.Timestamp date_canceled = 11;
	optional google.protobuf.Timestamp date_declined = 12;
	optional google.protobuf.Timestamp date_accepted = 13;
	optional google.protobuf.Timestamp date_expired = 14;
}

message UpdateMembershipRequest {
	bytes id = 1;
	optional Role role = 8;
}

message UpdateSiloRequest {
	bytes id = 1;
	optional string alias = 2;
	optional string name = 3;
	optional string description = 4;
}

message UpdateTeamRequest {
	bytes id = 1;
	optional string alias = 2;
	optional string name = 5;
	optional string description = 6;
}

message UpdateTokenRequest {
	bytes id = 1;
	optional string value = 2;
	optional string type = 3;
	optional string name = 4;
	optional google.protobuf.Timestamp date_expired = 14;
}

message UpdateUserRequest {
	bytes id = 1;
	optional string alias = 2;
}
